--- a/books/templates/books/books_list.html
+++ b/books/templates/books/books_list.html
@@ -9,7 +9,7 @@
       A simple warning alert—check it out!
     </div>
     <div class="d-flex justify-content-start">
-      <a class="btn btn-primary me-2" href="#" role="button">Додати книгу</a>
+      <a class="btn btn-primary me-2" href="{% url 'books_add' %}" role="button">Додати книгу</a>
       <button class="btn btn-success me-2" type="submit">Пошук</button>
       <form class="form-inline">
         <input class="form-control" type="search" placeholder="Пошук" aria-label="Search">
@@ -19,14 +19,39 @@
 </div>
 <br>
 <table class="table table-hover">
-  <tbody>
+  <thead>
     <tr>
-      <td>№</td>
-      <td>Назва книги</td>
-      <td>Фото</td>
-      <td>Пагінець</td>
-      <td>Формат</td>
+      <th>№</th>
+      <th>Назва</th>
+      <th>Фото</th>
+      <th>Пагінець</th>
+      <th>Формат</th>
+      <th>Закладка</th>
+      <th>Форзац</th>
+      <th>Дії</th>
     </tr>
+  </thead>
+  <tbody>
+    <td>1</td>
+    <td>Назва</td>
+    <td><img src="img/visual_cover.png" height="35" 2 width="35" class="rounded-circle" /></td>
+    <td>Пагінець</td>
+    <td>Формат</td>
+    <td>Закладка</td>
+    <td>Форзац</td>
+    <td>
+      <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Дія
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <li><a class="dropdown-item" href="{% url 'books_edit' 12 %}">Редагувати</a></li>
+          <li><a class="dropdown-item" href="{% url 'books_delete' 13 %}">Видалити</a></li>
+      </div>
+      </div>
+    </td>
+  </tbody>
 </table>
 
 {% endblock content %}
