--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -10,7 +10,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Books</a>
+          <a class="nav-link {% if request.resolver_match.url_name == 'books_list' %}active{% endif %}"
+            aria-current="page" href="{% url 'books_list' %}">Книги</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
