--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -14,7 +14,8 @@
             aria-current="page" href="{% url 'books_list' %}">Книги</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link {% if '/contact-admin' in request.path %}active{% endif %}"
+            href="{% url 'contact_admin' %}">Контакт</a>
         </li>
       </ul>
     </div>
