--- a/books/templates/books/books_list.html
+++ b/books/templates/books/books_list.html
@@ -28,11 +28,32 @@
 </div>
 <br>
 <table class="table table-hover">
+  {% with order_by=request.GET.order_by reverse=request.GET.reverse %}
   <thead>
     <tr>
-      <th>№</th>
-      <th>Назва</th>
-      <th>Формат</th>
+      <th><a href="#">№</a></th>
+      <th>
+        <a
+          href="{% url 'books_list' %}?order_by=name{% if request.GET.order_by == 'name' and request.GET.reverse != '1' %}&amp;reverse=1{% endif %}">
+          Назва
+          {% if order_by == 'name' and reverse != '1' %}
+          &uarr;
+          {% elif order_by == 'name' and reverse == '1' %}
+          &darr;
+          {% endif %}
+        </a>
+      </th>
+      <th>
+        <a
+          href="{% url 'books_list' %}?order_by=format{% if request.GET.order_by == 'format' and request.GET.reverse != '1' %}&amp;reverse=1{% endif %}">
+          Формат
+          {% if order_by == 'format' and reverse != '1' %}
+          &uarr;
+          {% elif order_by == 'format' and reverse == '1' %}
+          &darr;
+          {% endif %}
+        </a>
+      </th>
       <th>Корешок</th>
       <th>Закладка</th>
       <th>Каптал</th>
@@ -40,6 +61,7 @@
       <th>Дії</th>
     </tr>
   </thead>
+  {% endwith %}
   <tbody>
     {% for book in books %}
     <tr>
@@ -59,8 +81,13 @@
           <div class="circle" style="background-color: {{ book.captal }}"></div>
         </a>
       </td>
-
-      <td><img src="{% static book.image %}" height="35" 2 width="35" class="rounded-circle" /></td>
+      <td>
+        {% if book.photo %}
+        <img src="{{ book.photo.url }}" height="40" 2 width="40" class="rounded-circle" />
+        {% else %}
+        <img class="rounded-circle" src="{% static 'img/default_book.jpg' %}" height="40" width="40" />
+        {% endif %}
+      </td>
       <td>
         <div class="dropdown">
           <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
