--- a/books/templates/books/books_list.html
+++ b/books/templates/books/books_list.html
@@ -104,5 +104,30 @@
   </tbody>
   {% endfor %}
 </table>
-
+{% if books.has_other_pages %}
+{% with order_by=request.GET.order_by reverse=request.GET.reverse %}
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item">
+      <a class="page-link" href="{% url 'books_list' %}?page=1&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">
+        &laquo;
+      </a>
+    </li>
+    {% for p in books.paginator.page_range %}
+    <li class="page-item {% if books.number == p %}active{% endif %}">
+      <a class="page-link"
+        href="{% url 'books_list' %}?page={{ p }}&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">{{ p }}
+      </a>
+    </li>
+    {% endfor %}
+    <li class="page-item">
+      <a class="page-link"
+        href="{% url 'books_list' %}?page={{ books.paginator.num_pages }}&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">
+        &raquo;
+      </a>
+    </li>
+  </ul>
+</nav>
+{% endwith %}
+{% endif %}
 {% endblock content %}
