--- a/books/templates/contact_admin/form.html
+++ b/books/templates/contact_admin/form.html
@@ -1,5 +1,16 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
+
+{% block status_message %}
+{% if form.errors %}
+<div class="alert alert-warning" role="alert">
+  Будь ласка, виправте наступні помилки
+</div>
+{% endif %}
+{{ block.super }}
+{% endblock %}
+
 {% block content %}
-Тут буде форма контакту.
+{% crispy form %}
 {% endblock content %}
