--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,3 +15,15 @@
     padding: 10px;
     margin-bottom: 10px;
 }
+
+/* Modal Styles */
+.modal-dialog {
+    max-width: 600px;
+}
+
+.modal-dialog textarea,
+.modal-dialog select,
+.modal-dialog input,
+.modal-dialog .custom-file {
+    max-width: initial;
+}
