--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,3 +27,34 @@
 .modal-dialog .custom-file {
     max-width: initial;
 }
+
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.site-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.site-content {
+    flex: 1;
+}
+
+.footer {
+    background-color: #f8f9fa;
+    color: #000;
+    text-align: center;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-link {
+    margin-left: 10px;
+}
