--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -1,18 +1,16 @@
 {% load static %}
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-  <p class="col-md-4 mb-0 text-muted">© 2022 Company, Inc</p>
-
-  <a href="/"
-    class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-    <svg class="bi me-2" width="40" height="32">
-      <use xlink:href="#bootstrap"></use>
-    </svg>
-  </a>
-
-  <ul class="nav col-md-4 justify-content-end">
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-  </ul>
+<footer class="footer">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-md-6 mb-3 mb-md-0">
+        <p class="text-muted mb-0">© 2022 Morpheus</p>
+      </div>
+      <div class="col-md-6">
+        <ul class="list-inline text-muted mb-0">
+          <li class="list-inline-item"><a href="https://morpheus.com.ua/" class="text-muted">Home</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </footer>
